--- a/app/src/main/res/layout/activity_base.xml
+++ b/app/src/main/res/layout/activity_base.xml
@@ -39,7 +39,7 @@
         android:layout_alignParentBottom="true"
 
         app:menu="@menu/bottom_nav_menu"
-        android:background="#ffffff"
+        android:background="@color/light_gray"
         />
 
 </RelativeLayout>
