--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -8,7 +8,7 @@
 
     <ScrollView android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/light_gray"
+        android:background="@color/material_dynamic_primary90"
         tools:context=".LoginActivity">
 
         <LinearLayout
@@ -20,14 +20,15 @@
                 android:layout_width="match_parent"
                 android:layout_height="150dp"
                 android:orientation="vertical"
-                android:background="@color/purple_700">
+                android:background="@color/teal_250">
 
                 <TextView
                     android:id="@+id/textView_login_head"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="30dp"
-                    android:textColor="@color/white"
+                    android:textStyle="bold"
+                    android:textColor="@color/black"
                     android:text="Welcome back!"
                     android:textAlignment="center"
                     android:textAppearance="@style/TextAppearance.AppCompat.Title" />
@@ -36,8 +37,8 @@
                     android:id="@+id/textView_login_instruction"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textColor="@color/white"
-                    android:text="Please log in to continue"
+                    android:layout_marginTop="15dp"
+                    android:textColor="@color/black"                    android:text="Please log in to continue"
                     android:textAlignment="center"
                     android:textAppearance="@style/TextAppearance.AppCompat.Menu" />
 
@@ -46,7 +47,7 @@
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="-50dp"
+                android:layout_marginTop="-35dp"
                 android:layout_marginRight="15dp"
                 android:layout_marginLeft="15dp"
                 android:layout_marginBottom="15dp"
@@ -75,6 +76,8 @@
                         android:layout_height="wrap_content"
                         android:padding="6dp"
                         android:text="Email*"
+                        android:textStyle="bold"
+                        android:textColor="@color/black"
                         android:layout_toEndOf="@id/imageViewEmail"/>
 
                     <View
@@ -125,7 +128,9 @@
                         android:layout_height="wrap_content"
                         android:layout_toEndOf="@id/imageViewPwd"
                         android:padding="6dp"
-                        android:text="Password*" />
+                        android:text="Password*"
+                        android:textStyle="bold"
+                        android:textColor="@color/black"/>
 
                     <View
                         android:layout_width="250dp"
@@ -171,7 +176,10 @@
                     android:layout_marginTop="30dp"
                     android:layout_marginLeft="70dp"
                     android:layout_centerHorizontal="true"
-                    android:text="Login" />
+                    android:backgroundTint="@color/material_dynamic_primary90"
+                    android:text="Login"
+                    android:textColor="@color/black"
+                    android:textStyle="bold"/>
 
                 <LinearLayout
                     android:layout_width="wrap_content"
@@ -193,6 +201,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="@string/register"
+                        android:textStyle="bold"
                         android:textColor="@color/purple_700"
                         android:layout_marginTop="10dp"
                         android:textAlignment="center" />
@@ -220,6 +229,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="@string/click_here_to_reset"
+                        android:textStyle="bold"
                         android:textAlignment="center"
                         android:layout_marginTop="10dp"
                         android:textColor="@color/purple_700" />
