--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -10,7 +10,7 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/light_gray"
+        android:background="@color/material_dynamic_primary90"
         tools:context=".RegisterActivity">
 
         <LinearLayout
@@ -21,15 +21,16 @@
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="180dp"
-                android:background="@color/purple_700">
+                android:background="@color/teal_250">
 
                 <TextView
                     android:id="@+id/textView_register_head"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="30dp"
-                    android:textColor="@color/white"
                     android:text="Sign-up"
+                    android:textStyle="bold"
+                    android:textColor="@color/black"
                     android:textAlignment="center"
                     android:textAppearance="@style/TextAppearance.AppCompat.Title" />
 
@@ -37,12 +38,13 @@
                     android:id="@+id/textView_register_instruction"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textColor="@color/white"
+                    android:layout_marginTop="15dp"
                     android:layout_marginLeft="30dp"
                     android:layout_marginRight="30dp"
                     android:layout_below="@id/textView_register_head"
                     android:text="Please register yourself to continue "
                     android:textAlignment="center"
+                    android:textColor="@color/black"
                     android:textAppearance="@style/TextAppearance.AppCompat.Menu" />
             </RelativeLayout>
 
@@ -52,7 +54,7 @@
                 android:layout_marginBottom="15dp"
                 android:layout_marginRight="15dp"
                 android:layout_marginLeft="15dp"
-                android:layout_marginTop="-50dp"
+                android:layout_marginTop="-65dp"
                 android:background="@drawable/border"
                 android:padding="15dp">
 
@@ -79,7 +81,9 @@
                         android:layout_height="wrap_content"
                         android:layout_toEndOf="@id/imageViewName"
                         android:padding="6dp"
-                        android:text="Full Name*" />
+                        android:text="Full Name*"
+                        android:textStyle="bold"
+                        android:textColor="@color/black"/>
 
                     <View
                         android:id="@+id/divider_name"
@@ -129,7 +133,9 @@
                         android:layout_height="wrap_content"
                         android:layout_toEndOf="@id/imageViewEmail"
                         android:padding="6dp"
-                        android:text="Email*" />
+                        android:text="Email*"
+                        android:textStyle="bold"
+                        android:textColor="@color/black"/>
 
                     <View
                         android:id="@+id/divider_email"
@@ -179,7 +185,9 @@
                         android:layout_height="wrap_content"
                         android:layout_toEndOf="@id/imageViewDoB"
                         android:padding="6dp"
-                        android:text="Date of Birth (dd/mm/yyyy)*" />
+                        android:text="Date of Birth (dd/mm/yyyy)*"
+                        android:textStyle="bold"
+                        android:textColor="@color/black"/>
 
                     <View
                         android:id="@+id/divider_dob"
@@ -239,7 +247,9 @@
                         android:layout_height="wrap_content"
                         android:layout_toEndOf="@id/imageViewGender"
                         android:padding="6dp"
-                        android:text="Gender*" />
+                        android:text="Gender*"
+                        android:textStyle="bold"
+                        android:textColor="@color/black"/>
 
                     <View
                         android:id="@+id/divider_gender"
@@ -302,7 +312,9 @@
                         android:layout_height="wrap_content"
                         android:layout_toEndOf="@id/imageViewMobile"
                         android:padding="6dp"
-                        android:text="Mobile*" />
+                        android:text="Mobile*"
+                        android:textStyle="bold"
+                        android:textColor="@color/black"/>
 
                     <View
                         android:id="@+id/divider_mobile"
@@ -352,7 +364,9 @@
                         android:layout_height="wrap_content"
                         android:layout_toEndOf="@id/imageViewPwd"
                         android:padding="6dp"
-                        android:text="Password*" />
+                        android:text="Password*"
+                        android:textStyle="bold"
+                        android:textColor="@color/black"/>
 
                     <View
                         android:id="@+id/divider_pwd"
@@ -413,7 +427,9 @@
                         android:layout_height="wrap_content"
                         android:layout_toEndOf="@id/imageViewCpwd"
                         android:padding="6dp"
-                        android:text="Confirm Password*" />
+                        android:text="Confirm Password*"
+                        android:textStyle="bold"
+                        android:textColor="@color/black"/>
 
                     <View
                         android:id="@+id/divider_cpwd"
@@ -434,6 +450,7 @@
                         android:background="@android:color/transparent"
                         android:hint="enter your password"
                         android:inputType="textPassword"
+                        android:minHeight="48dp"
                         android:padding="6dp"
                         android:textCursorDrawable="@drawable/edittextcursor"
                         android:textSize="16sp" />
@@ -470,7 +487,8 @@
                     android:layout_centerHorizontal="true"
                     android:layout_marginTop="50dp"
                     android:layout_marginBottom="50dp"
-                    android:text="@string/register" />
+                    android:text="@string/register"
+                    android:backgroundTint="@color/material_dynamic_primary90"/>
 
                 <ProgressBar
                     android:id="@+id/progressbar_reg"
