--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
+    <color name="purple_500">#050007</color>
+    <color name="purple_700">#23B9DF</color>
     <color name="teal_200">#FF03DAC5</color>
+    <color name="teal_250">#88F6D7</color>
+
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
@@ -12,4 +14,5 @@
     <color name="green">#00FF00</color>
     <color name="yellow">#FFC107</color>
     <color name="light_gray">#D3D3D3</color>
+    <color name="yellow1">#DCD435</color>
 </resources>
