--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,11 @@
     <color name="green">#00FF00</color>
     <color name="yellow">#FFC107</color>
     <color name="light_gray">#D3D3D3</color>
+
+    <color name="primary">#D5DAD8</color>
+    <color name="secondary">#41B788</color>
+    <color name="night_mode">#6124B1</color>
+    <color name="notification">#13B2C3</color>
+    <color name="private_account">#E6A326</color>
+    <color name="security">#D95F69</color>
 </resources>
