--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -8,8 +8,9 @@
 
     <ScrollView android:layout_width="match_parent"
         android:layout_height="match_parent"
+        tools:context=".LoginActivity"
         android:background="@color/material_dynamic_primary90"
-        tools:context=".LoginActivity">
+        >
 
         <LinearLayout
             android:layout_width="match_parent"
